solved overlap issue

--- a/src/components/login.css
+++ b/src/components/login.css
@@ -14,6 +14,7 @@
    flex-direction: column;
     align-items: center;
     justify-content:space-evenly;
+    z-index: 100;
      
 }
 .logo{
