--- a/src/components/register.css
+++ b/src/components/register.css
@@ -14,6 +14,7 @@
    flex-direction: column;
     align-items: center;
     justify-content: space-between;
+    z-index: 100;
      
 }
 .logo{
